[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "gazebo_terrain_generator"
version = "0.1.0"
description = "Tools for generating terrain assets for Gazebo simulations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your@email.com" }
]

dependencies = [
  "geopy==2.4.1",
  "opencv-python==4.11.0.86",
  "flask>=2.0.1",
  "mercantile==1.2.0",
  "requests>=2.25.1",
  "pillow>=9.0.0",
  "rasterio>=1.3.0",
  "shapely>=2.0.0",
  "pyproj>=3.4.0",
  "mapbox_vector_tile",
  "trimesh==4.11.1",
  "geopandas>=1.1.2",
  "triangle==20250106",
  "scipy==1.15.3",
  "pycollada>=0.9.3"
]

[project.scripts]
gazebo-terrain-generator = "gazebo_terrain_generator.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gazebo_terrain_generator"]

[tool.hatch.build]
sources = ["src"]
include = [
  "gazebo_terrain_generator/templates/*.txt"
]